--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
                     drawSheetName('MilitaryChange', 'SELECT B,E', MilChange17_18RH);
                     drawSheetName('MilitaryChange', 'SELECT B,F', MilChange18_19RH);
                     drawSheetName('MilitaryChange', 'SELECT B,G', MilChange15_19RH);
+                    drawSheetName('HealthPercChange', 'SELECT A,B,C,D,E,F,G,H,I,J,K', HealthPercChangeRH);
+                    drawSheetName('EduPercChange', 'SELECT A,B,C,D,E,F,G,H,I,J,K', EduPercChangeRH);
+                    drawSheetName('MilitaryPercChange', 'SELECT A,B,C,D,E,F,G,H,I,J,K', MilPercChangeRH);
+                    drawSheetName('PercGDP15', 'SELECT A,B,C,D', PercGDP15RH);
+                    drawSheetName('PercGDP16', 'SELECT A,B,C,D', PercGDP16RH);
+                    drawSheetName('PercGDP17', 'SELECT A,B,C,D', PercGDP17RH);
+                    drawSheetName('PercGDP18', 'SELECT A,B,C,D', PercGDP18RH);
+                    drawSheetName('PercGDP19', 'SELECT A,B,C,D', PercGDP19RH);
+                    drawSheetName('PercChange15.19', 'SELECT A,B,C,D', HEMPercChange15_19RH);
+
                 } ///drawAllSheets
                 
                 function drawSheetName(sheetName, query, responseHandler){
@@ -736,6 +746,177 @@
                     var chart = new google.visualization.BarChart(document.getElementById('mil_change_15_19_div'));
                     chart.draw(data, options);          
                 };//MilChange15_19RH
+                
+                // % Change in Healthcare Expenditures:
+                function HealthPercChangeRH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent Change in Healthcare Expenditure Year over Year from 2015 to 2019',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Percent Change in Healthcare Expenditures', format: 'percent'},
+                        hAxis: {title: 'Year'},
+                    };
+
+                    var chart = new google.visualization.LineChart(document.getElementById('health_perc_change_div'));
+                    chart.draw(data, options);
+
+                };//HealthPercChangeRH
+
+                // % Change in Education Expenditures:
+                function EduPercChangeRH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent Change in Education Expenditure Year over Year from 2015 to 2019',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Percent Change in Education Expenditures', format: 'percent'},
+                        hAxis: {title: 'Year'},
+                    };
+
+                    var chart = new google.visualization.LineChart(document.getElementById('edu_perc_change_div'));
+                    chart.draw(data, options);
+
+                };//EduPercChangeRH
+
+                // % Change in Military Expenditures:
+                function MilPercChangeRH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent Change in Military Expenditure Year over Year from 2015 to 2019',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Percent Change in Military Expenditures', format: 'percent'},
+                        hAxis: {title: 'Year'},
+                    };
+
+                    var chart = new google.visualization.LineChart(document.getElementById('mil_perc_change_div'));
+                    chart.draw(data, options);
+
+                };//MilPercChangeRH
+
+                //Comparison of Percent of GDP on Health, Education and Military Spending in 2015:
+                function PercGDP15RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent of GDP Spent on Healthcare, Education and Military Spending in 2015',
+                        titleTextStyle: {fontSize: 18},
+                        legend: {position: 'top', maxLines: 1},
+                        bar: {groupWidth: '75%'},
+                        isStacked: true,
+                        vAxis: {title: 'Country'},
+                        hAxis: {title: 'Percent of GDP Spent on Healthcare, Education and Military Spending', format: 'percent'},
+                    };
+
+                    var chart = new google.visualization.BarChart(document.getElementById('hem_perc_gdp_15_div'));
+                    chart.draw(data, options);
+                } //PercGDP15RH
+
+                //Comparison of Percent of GDP on Health, Education and Military Spending in 2016:
+                function PercGDP16RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent of GDP Spent on Healthcare, Education and Military Spending in 2016',
+                        titleTextStyle: {fontSize: 18},
+                        legend: {position: 'top', maxLines: 1},
+                        bar: {groupWidth: '75%'},
+                        isStacked: true,
+                        vAxis: {title: 'Country'},
+                        hAxis: {title: 'Percent of GDP Spent on Healthcare, Education and Military Spending', format: 'percent'},
+                    };
+
+                    var chart = new google.visualization.BarChart(document.getElementById('hem_perc_gdp_16_div'));
+                    chart.draw(data, options);
+                } //PercGDP16RH
+
+                //Comparison of Percent of GDP on Health, Education and Military Spending in 2017:
+                function PercGDP17RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent of GDP Spent on Healthcare, Education and Military Spending in 2017',
+                        titleTextStyle: {fontSize: 18},
+                        legend: {position: 'top', maxLines: 1},
+                        bar: {groupWidth: '75%'},
+                        isStacked: true,
+                        vAxis: {title: 'Country'},
+                        hAxis: {title: 'Percent of GDP Spent on Healthcare, Education and Military Spending', format: 'percent'},
+                    };
+
+                    var chart = new google.visualization.BarChart(document.getElementById('hem_perc_gdp_17_div'));
+                    chart.draw(data, options);
+                } //PercGDP17RH
+
+                //Comparison of Percent of GDP on Health, Education and Military Spending in 2018:
+                function PercGDP18RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent of GDP Spent on Healthcare, Education and Military Spending in 2018',
+                        titleTextStyle: {fontSize: 18},
+                        legend: {position: 'top', maxLines: 1},
+                        bar: {groupWidth: '75%'},
+                        isStacked: true,
+                        vAxis: {title: 'Country'},
+                        hAxis: {title: 'Percent of GDP Spent on Healthcare, Education and Military Spending', format: 'percent'},
+                    };
+
+                    var chart = new google.visualization.BarChart(document.getElementById('hem_perc_gdp_18_div'));
+                    chart.draw(data, options);
+                } //PercGDP18RH                
+
+                //Comparison of Percent of GDP on Health, Education and Military Spending in 2019:
+                function PercGDP19RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent of GDP Spent on Healthcare, Education and Military Spending in 2019',
+                        titleTextStyle: {fontSize: 18},
+                        legend: {position: 'top', maxLines: 1},
+                        bar: {groupWidth: '75%'},
+                        isStacked: true,
+                        vAxis: {title: 'Country'},
+                        hAxis: {title: 'Percent of GDP Spent on Healthcare, Education and Military Spending', format: 'percent'},
+                    };
+
+                    var chart = new google.visualization.BarChart(document.getElementById('hem_perc_gdp_19_div'));
+                    chart.draw(data, options);
+                } //PercGDP19RH
+
+                //Comparison of Percent Change in Expenditures 2015 to 2019:
+                function HEMPercChange15_19RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Percent Change in Governmental Expenditures from 2015 to 2019',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Percent Change in Governmental Expenditures from 2015 to 2019', format: 'percent'},
+                        hAxis: {title: 'Country'},
+                };
+
+                    var chart = new google.visualization.ColumnChart(document.getElementById('hem_perc_change_15_19_div'));
+                    chart.draw(data, options);
+                } //HealthResponseHandler
 
                 </script>
 
@@ -862,7 +1043,11 @@
             <br>
             <div class="text-center" id="health_change_18_19_div" style="width: 900px; height: 500px;"></div>
             <br>
-            <div class="text-center" id="health_change_15_19_div" style="width: 900px; height: 500px;"></div>            
+            <div class="text-center" id="health_change_15_19_div" style="width: 900px; height: 500px;"></div>
+            <br>
+            <br>
+            <br>
+            <div class="text-center" id="health_perc_change_div" style="width: 900px; height: 500px;"></div>            
 
         </section> 
         <!-- Education Spending -->
@@ -906,6 +1091,10 @@
             <div class="text-center" id="edu_change_18_19_div" style="width: 900px; height: 500px;"></div>
             <br>
             <div class="text-center" id="edu_change_15_19_div" style="width: 900px; height: 500px;"></div>
+            <br>
+            <br>
+            <br>
+            <div class="text-center" id="edu_perc_change_div" style="width: 900px; height: 500px;"></div>
         </div>
         </section>
         <!-- Military Spending -->
@@ -949,6 +1138,10 @@
                 <div class="text-center" id="mil_change_18_19_div" style="width: 900px; height: 500px;"></div>
                 <br>
                 <div class="text-center" id="mil_change_15_19_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <br>
+                <br>
+                <div class="text-center" id="mil_perc_change_div" style="width: 900px; height: 500px;"></div>
         </section>
         <!-- Comparative Analysis -->
         <section class="page-section" id="analysis">
@@ -957,6 +1150,20 @@
                     <h2 class="section-heading text-uppercase">Comparative Analysis</h2>
                     <h3 class="section-subheading text-muted">Comparing health, education and military spending.</h3>
                 </div>
+                <br>
+                <div class="text-center" id="hem_perc_gdp_15_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="hem_perc_gdp_16_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="hem_perc_gdp_17_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="hem_perc_gdp_18_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="hem_perc_gdp_19_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <br>
+                <br>
+                <div class="text-center" id="hem_perc_change_15_19_div" style="width: 900px; height: 500px;"></div>
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                 </div>
